fixed pagination bug and post id too long problem

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -102,3 +102,8 @@ p.thread-title {
         }
     }
 }
+
+code[class*=language-],
+pre[class*=language-] {
+    font-family: monospace;
+}
